--- a/renderer/about.html
+++ b/renderer/about.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <title>Clippy</title>
-
-    <script src="./js/script.js" defer></script>
+    <title>About Clippy</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <p>about window</p>
 </body>
 </html>
