--- a/renderer/index.html
+++ b/renderer/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <title>Clippy</title>
 
-    <script src="./js/script.js" defer></script>
+    <script src="./js/index.js" defer></script>
 </head>
 <body>
     <h1>Hello World!</h1>
