--- a/renderer/main.html
+++ b/renderer/main.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+    <link rel="stylesheet" href="./css/mainPage.css">
     <title>Clippy</title>
+    <script src="./js/mainPage.js" defer></script>
 </head>
 <body>
     <h1>Hello World!</h1>
-
-    <script src="./js/index.js" defer></script>
 </body>
 </html>
