app style, take clipboard onclick

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -10,6 +10,11 @@
     <script src="./js/mainPage.js" defer></script>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <main class="main">
+        <h1 class="main-title">Clippy Buffer</h1>
+        <div class="wrapper">
+            <div class="container"></div>
+       </div>
+    </main>
 </body>
 </html>
